# TT-docgen

./: .gitignore  README.md  example.spec  pyproject.toml
.github/: baseflow.yml
.github/workflows/: baseflow.yml  build.yml  build_macos.yml  pr_check.yml
src/docgen/: core.py  data_fetcher.py  design.py  entities.py  example.py  generators.py  main.py  settings_manager.py
src/docgen/design/: design.py  ui_settings.py
src/docgen/utils/: utils.py
src/test/: test_entities.py  test_fetcher.py
src/test/fixtures/: font.glyphs  workers.xlsx
