[project]
name = "docgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl==0.16.4",
    "glyphslib>=6.13.0",
    "openpyxl>=3.1.5",
    "openstep-plist>=0.5.2",
    "pyinstaller>=6.20.0",
    "pyside6>=6.11.1",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.15",
]

[tool.setuptools.packages.find]
where = ["src"]
